Programs and EXE/Grammar/output/GauravPalandeAss2/SILParser.java
// $ANTLR 3.5.1 C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g 2016-02-23 13:08:39

package GauravPalandeAss2;
import java.util.HashMap;
import java.util.Scanner;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class SILParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ESC_SEQ", 
		"HEX_DIGIT", "ID", "INT", "NEWLINE", "OCTAL_ESC", "STRING", "UNICODE_ESC", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'//'", "'='", 
		"'END'", "'INPUT '", "'INTEGER '", "'LET'", "'PRINT'", "'PRINTLN'"
	};
	public static final int EOF=-1;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int ESC_SEQ=6;
	public static final int HEX_DIGIT=7;
	public static final int ID=8;
	public static final int INT=9;
	public static final int NEWLINE=10;
	public static final int OCTAL_ESC=11;
	public static final int STRING=12;
	public static final int UNICODE_ESC=13;
	public static final int WS=14;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SILParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SILParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return SILParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g"; }


	/** Map variable name to Integer object holding value */
	HashMap memory = new HashMap();



	// $ANTLR start "prog"
	// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:14:1: prog : ( stat )+ ;
	public final void prog() throws RecognitionException {
		try {
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:14:6: ( ( stat )+ )
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:14:10: ( stat )+
			{
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:14:10: ( stat )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==NEWLINE||LA1_0==22||(LA1_0 >= 24 && LA1_0 <= 29)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:14:10: stat
					{
					pushFollow(FOLLOW_stat_in_prog24);
					stat();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "stat"
	// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:16:1: stat : ( 'PRINT' STRING | 'PRINT' expr | 'PRINTLN' STRING | 'PRINTLN' expr | 'INPUT ' ID1= ID ( ',' ID2= ID )* NEWLINE | 'INTEGER ' ID1= ID ( ',' ID2= ID )* NEWLINE | 'LET' ID '=' expr | '//' | 'END' expr NEWLINE | ID '=' expr NEWLINE | NEWLINE );
	public final void stat() throws RecognitionException {
		Token ID1=null;
		Token ID2=null;
		Token STRING1=null;
		Token STRING3=null;
		Token ID5=null;
		Token ID8=null;
		int expr2 =0;
		int expr4 =0;
		int expr6 =0;
		int expr7 =0;
		int expr9 =0;

		try {
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:16:6: ( 'PRINT' STRING | 'PRINT' expr | 'PRINTLN' STRING | 'PRINTLN' expr | 'INPUT ' ID1= ID ( ',' ID2= ID )* NEWLINE | 'INTEGER ' ID1= ID ( ',' ID2= ID )* NEWLINE | 'LET' ID '=' expr | '//' | 'END' expr NEWLINE | ID '=' expr NEWLINE | NEWLINE )
			int alt4=11;
			switch ( input.LA(1) ) {
			case 28:
				{
				int LA4_1 = input.LA(2);
				if ( (LA4_1==STRING) ) {
					alt4=1;
				}
				else if ( ((LA4_1 >= ID && LA4_1 <= INT)||LA4_1==15) ) {
					alt4=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 29:
				{
				int LA4_2 = input.LA(2);
				if ( (LA4_2==STRING) ) {
					alt4=3;
				}
				else if ( ((LA4_2 >= ID && LA4_2 <= INT)||LA4_2==15) ) {
					alt4=4;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 25:
				{
				alt4=5;
				}
				break;
			case 26:
				{
				alt4=6;
				}
				break;
			case 27:
				{
				alt4=7;
				}
				break;
			case 22:
				{
				alt4=8;
				}
				break;
			case 24:
				{
				alt4=9;
				}
				break;
			case ID:
				{
				alt4=10;
				}
				break;
			case NEWLINE:
				{
				alt4=11;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:16:8: 'PRINT' STRING
					{
					match(input,28,FOLLOW_28_in_stat34); 
					STRING1=(Token)match(input,STRING,FOLLOW_STRING_in_stat36); 
					System.out.print((STRING1!=null?STRING1.getText():null).replaceAll("\"", ""));
					}
					break;
				case 2 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:18:2: 'PRINT' expr
					{
					match(input,28,FOLLOW_28_in_stat44); 
					pushFollow(FOLLOW_expr_in_stat46);
					expr2=expr();
					state._fsp--;

					System.out.print(expr2);
					}
					break;
				case 3 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:20:2: 'PRINTLN' STRING
					{
					match(input,29,FOLLOW_29_in_stat54); 
					STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_stat56); 
					System.out.println((STRING3!=null?STRING3.getText():null).replaceAll("\"", ""));
					}
					break;
				case 4 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:22:2: 'PRINTLN' expr
					{
					match(input,29,FOLLOW_29_in_stat64); 
					pushFollow(FOLLOW_expr_in_stat66);
					expr4=expr();
					state._fsp--;

					System.out.println(expr4);
					}
					break;
				case 5 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:29:9: 'INPUT ' ID1= ID ( ',' ID2= ID )* NEWLINE
					{
					match(input,25,FOLLOW_25_in_stat119); 
					ID1=(Token)match(input,ID,FOLLOW_ID_in_stat125); 
					  Scanner in1 = new Scanner(System.in); Integer i = in1.nextInt(); memory.put((ID1!=null?ID1.getText():null), i);
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:30:17: ( ',' ID2= ID )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==19) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:30:18: ',' ID2= ID
							{
							match(input,19,FOLLOW_19_in_stat146); 
							ID2=(Token)match(input,ID,FOLLOW_ID_in_stat152); 
							 
							                Scanner in2 = new Scanner(System.in); Integer j = in2.nextInt(); memory.put((ID2!=null?ID2.getText():null), j);
							}
							break;

						default :
							break loop2;
						}
					}

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat158); 
					}
					break;
				case 6 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:33:9: 'INTEGER ' ID1= ID ( ',' ID2= ID )* NEWLINE
					{
					match(input,26,FOLLOW_26_in_stat179); 
					ID1=(Token)match(input,ID,FOLLOW_ID_in_stat185); 
					if( memory.containsKey(ID1.getText())){
					                                            System.out.println(ID1.getText()+"is a duplicate element");
					                                            System.exit(0);
					                                        } memory.put((ID1!=null?ID1.getText():null), 0);
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:37:17: ( ',' ID2= ID )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==19) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:37:18: ',' ID2= ID
							{
							match(input,19,FOLLOW_19_in_stat206); 
							ID2=(Token)match(input,ID,FOLLOW_ID_in_stat212); 
							if( memory.containsKey(ID2.getText())){
							                                            System.out.println(ID2.getText()+"is a duplicate element");
							                                            System.exit(0);
							                                        }  memory.put((ID2!=null?ID2.getText():null), 0);
							}
							break;

						default :
							break loop3;
						}
					}

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat218); 
					}
					break;
				case 7 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:45:2: 'LET' ID '=' expr
					{
					match(input,27,FOLLOW_27_in_stat244); 
					ID5=(Token)match(input,ID,FOLLOW_ID_in_stat246); 
					match(input,23,FOLLOW_23_in_stat248); 
					pushFollow(FOLLOW_expr_in_stat250);
					expr6=expr();
					state._fsp--;

					 memory.put((ID5!=null?ID5.getText():null), new Integer(expr6));
					}
					break;
				case 8 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:47:2: '//'
					{
					match(input,22,FOLLOW_22_in_stat260); 

					}
					break;
				case 9 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:49:2: 'END' expr NEWLINE
					{
					match(input,24,FOLLOW_24_in_stat268); 
					System.exit(0);
					pushFollow(FOLLOW_expr_in_stat274);
					expr7=expr();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat276); 
					System.out.print(expr7);
					}
					break;
				case 10 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:52:9: ID '=' expr NEWLINE
					{
					ID8=(Token)match(input,ID,FOLLOW_ID_in_stat288); 
					match(input,23,FOLLOW_23_in_stat290); 
					pushFollow(FOLLOW_expr_in_stat292);
					expr9=expr();
					state._fsp--;

					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat294); 
					memory.put((ID8!=null?ID8.getText():null), new Integer(expr9));
					}
					break;
				case 11 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:54:9: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_stat314); 
					System.out.println("");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "expr"
	// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:57:1: expr returns [int value] : e= multExpr ( '+' e= multExpr | '-' e= multExpr )* ;
	public final int expr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:58:5: (e= multExpr ( '+' e= multExpr | '-' e= multExpr )* )
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:58:9: e= multExpr ( '+' e= multExpr | '-' e= multExpr )*
			{
			pushFollow(FOLLOW_multExpr_in_expr341);
			e=multExpr();
			state._fsp--;

			value = e;
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:59:9: ( '+' e= multExpr | '-' e= multExpr )*
			loop5:
			while (true) {
				int alt5=3;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==18) ) {
					alt5=1;
				}
				else if ( (LA5_0==20) ) {
					alt5=2;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:59:13: '+' e= multExpr
					{
					match(input,18,FOLLOW_18_in_expr357); 
					pushFollow(FOLLOW_multExpr_in_expr362);
					e=multExpr();
					state._fsp--;

					value += e;
					}
					break;
				case 2 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:60:13: '-' e= multExpr
					{
					match(input,20,FOLLOW_20_in_expr378); 
					pushFollow(FOLLOW_multExpr_in_expr383);
					e=multExpr();
					state._fsp--;

					value -= e;
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "expr"



	// $ANTLR start "multExpr"
	// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:69:1: multExpr returns [int value] : e= atom ( ( '*' e= atom ) | ( '/' e= atom ) )* ;
	public final int multExpr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:70:5: (e= atom ( ( '*' e= atom ) | ( '/' e= atom ) )* )
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:70:9: e= atom ( ( '*' e= atom ) | ( '/' e= atom ) )*
			{
			pushFollow(FOLLOW_atom_in_multExpr430);
			e=atom();
			state._fsp--;

			value = e;
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:72:6: ( ( '*' e= atom ) | ( '/' e= atom ) )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==17) ) {
					alt6=1;
				}
				else if ( (LA6_0==21) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:72:9: ( '*' e= atom )
					{
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:72:9: ( '*' e= atom )
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:72:10: '*' e= atom
					{
					match(input,17,FOLLOW_17_in_multExpr452); 
					pushFollow(FOLLOW_atom_in_multExpr456);
					e=atom();
					state._fsp--;

					value *= e;
					}

					}
					break;
				case 2 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:74:8: ( '/' e= atom )
					{
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:74:8: ( '/' e= atom )
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:74:9: '/' e= atom
					{
					match(input,21,FOLLOW_21_in_multExpr475); 
					pushFollow(FOLLOW_atom_in_multExpr479);
					e=atom();
					state._fsp--;

					value /= e;
					}

					}
					break;

				default :
					break loop6;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "multExpr"



	// $ANTLR start "atom"
	// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:79:1: atom returns [int value] : ( INT | ID | '(' expr ')' );
	public final int atom() throws RecognitionException {
		int value = 0;


		Token INT10=null;
		Token ID11=null;
		int expr12 =0;

		try {
			// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:80:5: ( INT | ID | '(' expr ')' )
			int alt7=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt7=1;
				}
				break;
			case ID:
				{
				alt7=2;
				}
				break;
			case 15:
				{
				alt7=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:80:9: INT
					{
					INT10=(Token)match(input,INT,FOLLOW_INT_in_atom515); 
					value = Integer.parseInt((INT10!=null?INT10.getText():null));
					}
					break;
				case 2 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:81:9: ID
					{
					ID11=(Token)match(input,ID,FOLLOW_ID_in_atom527); 

					        Integer v = (Integer)memory.get((ID11!=null?ID11.getText():null));
					        if ( v!=null ) value = v.intValue();
					        else System.err.println("undefined variable "+(ID11!=null?ID11.getText():null));
					        
					}
					break;
				case 3 :
					// C:\\Users\\gaura\\Desktop\\Grammar\\SIL.g:87:9: '(' expr ')'
					{
					match(input,15,FOLLOW_15_in_atom547); 
					pushFollow(FOLLOW_expr_in_atom549);
					expr12=expr();
					state._fsp--;

					match(input,16,FOLLOW_16_in_atom551); 
					value = expr12;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "atom"

	// Delegated rules



	public static final BitSet FOLLOW_stat_in_prog24 = new BitSet(new long[]{0x000000003F400502L});
	public static final BitSet FOLLOW_28_in_stat34 = new BitSet(new long[]{0x0000000000001000L});
	public static final BitSet FOLLOW_STRING_in_stat36 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_28_in_stat44 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_stat46 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_29_in_stat54 = new BitSet(new long[]{0x0000000000001000L});
	public static final BitSet FOLLOW_STRING_in_stat56 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_29_in_stat64 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_stat66 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_25_in_stat119 = new BitSet(new long[]{0x0000000000000100L});
	public static final BitSet FOLLOW_ID_in_stat125 = new BitSet(new long[]{0x0000000000080400L});
	public static final BitSet FOLLOW_19_in_stat146 = new BitSet(new long[]{0x0000000000000100L});
	public static final BitSet FOLLOW_ID_in_stat152 = new BitSet(new long[]{0x0000000000080400L});
	public static final BitSet FOLLOW_NEWLINE_in_stat158 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_26_in_stat179 = new BitSet(new long[]{0x0000000000000100L});
	public static final BitSet FOLLOW_ID_in_stat185 = new BitSet(new long[]{0x0000000000080400L});
	public static final BitSet FOLLOW_19_in_stat206 = new BitSet(new long[]{0x0000000000000100L});
	public static final BitSet FOLLOW_ID_in_stat212 = new BitSet(new long[]{0x0000000000080400L});
	public static final BitSet FOLLOW_NEWLINE_in_stat218 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_27_in_stat244 = new BitSet(new long[]{0x0000000000000100L});
	public static final BitSet FOLLOW_ID_in_stat246 = new BitSet(new long[]{0x0000000000800000L});
	public static final BitSet FOLLOW_23_in_stat248 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_stat250 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_22_in_stat260 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_24_in_stat268 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_stat274 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_NEWLINE_in_stat276 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_stat288 = new BitSet(new long[]{0x0000000000800000L});
	public static final BitSet FOLLOW_23_in_stat290 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_stat292 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_NEWLINE_in_stat294 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_NEWLINE_in_stat314 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_multExpr_in_expr341 = new BitSet(new long[]{0x0000000000140002L});
	public static final BitSet FOLLOW_18_in_expr357 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_multExpr_in_expr362 = new BitSet(new long[]{0x0000000000140002L});
	public static final BitSet FOLLOW_20_in_expr378 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_multExpr_in_expr383 = new BitSet(new long[]{0x0000000000140002L});
	public static final BitSet FOLLOW_atom_in_multExpr430 = new BitSet(new long[]{0x0000000000220002L});
	public static final BitSet FOLLOW_17_in_multExpr452 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_atom_in_multExpr456 = new BitSet(new long[]{0x0000000000220002L});
	public static final BitSet FOLLOW_21_in_multExpr475 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_atom_in_multExpr479 = new BitSet(new long[]{0x0000000000220002L});
	public static final BitSet FOLLOW_INT_in_atom515 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_atom527 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_15_in_atom547 = new BitSet(new long[]{0x0000000000008300L});
	public static final BitSet FOLLOW_expr_in_atom549 = new BitSet(new long[]{0x0000000000010000L});
	public static final BitSet FOLLOW_16_in_atom551 = new BitSet(new long[]{0x0000000000000002L});
}
